# pong-sdl-nix

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  shell.nix
src/: game.cpp  game.h  input.h  physics.h
